--- a/linq-csv/linq-csv.csproj
+++ b/linq-csv/linq-csv.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>linq_csv</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="27.2.1" />
+  </ItemGroup>
+
 </Project>
